<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnableBlutooth</string>
    <string name="action_settings">Settings</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
	<string name="btnSearch">Search</string>
	<string name="btnExit">btnExit</string>
	<string name="up_str">UP</string>
	<string name="down_str">DOWN</string>
	<string name="left_str">LEFT</string>
	<string name="right_str">RIGHT</string>
	<string name="back_str">BACK</string>
	<string name="ok_str">OK</string>
</resources>